[package]
name = "Project_lovelace_redux_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"

bevy-inspector-egui = "0.23.4"
bevy_prototype_debug_lines = "0.11.0"
bevy_prototype_lyon = "0.11.0"
enum-map = "2.7.3"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
